# rust_boppo_core

./: CHANGELOG.md  Cargo.toml  README.md  justfile
src/: active_language.rs  audio.rs  button.rs  button_events.rs  buttons.rs  color.rs  easings.rs  executor.rs  framebuffer.rs  hal.rs  internal.rs  interpolation.rs  language.rs  lib.rs  lights.rs  lights_plane.rs  lights_setter.rs  main_framebuffer.rs  short_duration.rs  update_loop.rs
src/audio/: controller.rs  sound_builder.rs  sound_instruction.rs
src/hal/wasm/: error.rs  host_event.rs
src/internal/: audio_paramter.rs  button_counts.rs  wasm.rs
src/lights_plane/: circle_builder.rs  coordinates.rs  rectangle_builder.rs
src/tests/: button_events_test.rs  button_test.rs  buttons_test.rs  easings.rs  lights_test.rs
