[package]
name = "boppo_core"
version = "0.2.1"
edition = "2024"
authors = ["Ben Hansen <ben@boppo.com>"]
description = "The core APIs for creating activities for the Boppo tablet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/boppofun/rust_boppo_core"
homepage = "https://developer.boppo.com"

[features]
wasm = [] # For use by the WASM client and host but not other environments

[dependencies]
# These dependencies should be kept in sync with device_software workspace to reduce code duplication
edge-executor = "0.4.1"
embassy-time = "0.4"
futures = { version = "0.3.30", default-features = false }
log = "0.4.17"
rand = "0.9"
rgb = "0.8.34"
serde = "1.0.218"
serde_json = "1.0.128"
tokio = { version = "1.21", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.21", features = ["sync", "rt", "macros"] }
embassy-time = { version = "0.4", features = ["std"] }

# needed for tests to compile with embassy crates
embassy-time-queue-utils = { version = "0.1.0", features = ["generic-queue-64"] }
critical-section = { version = "1.1", features = ["std"]}
